force-app/main/default/objects/Plan_Details__mdt/Plan_Details__mdt.object-meta.xml
<CustomObject>
    <label>Plan Details</label>
    <pluralLabel>Plan Details</pluralLabel>
</CustomObject>