force-app/main/default/objects/Plan_Details__mdt/fields/Calls_Made_Daily__c.field-meta.xml
<CustomField>
    <fullName>Calls_Made_Daily__c</fullName>
    <label>Calls Made Daily</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>