force-app/main/default/objects/Plan_Details__mdt/fields/Calls_Made_Yearly__c.field-meta.xml
<CustomField>
    <fullName>Calls_Made_Yearly__c</fullName>
    <label>Calls Made Yearly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>